--- a/mall/src/main/resources/application.properties
+++ b/mall/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = awpak47m4a1
+spring.datasource.password = *
 spring.datasource.url=jdbc:mysql://localhost:3306/mall?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 
 mybatis.configuration.map-underscore-to-camel-case=true
-#classpath:Ö»ÄÜ¼ÓÔØÕÒµ½µÄµÚÒ»¸ö×ÊÔ´ÎÄ¼ş,classpath*:ÄÜ¼ÓÔØ¶à¸öÂ·¾¶ÏÂµÄ×ÊÔ´ÎÄ¼ş.
+#classpath:åªèƒ½åŠ è½½æ‰¾åˆ°çš„ç¬¬ä¸€ä¸ªèµ„æºæ–‡ä»¶,classpath*:èƒ½åŠ è½½å¤šä¸ªè·¯å¾„ä¸‹çš„èµ„æºæ–‡ä»¶.
 mybatis.mapper-locations = classpath*:mapper/*Mapper.xml
-#mybatis¿ØÖÆÌ¨ÈÕÖ¾ÅäÖÃ
+#mybatisæ§åˆ¶å°æ—¥å¿—é…ç½®
 mybatis.configuration.log-impl= org.apache.ibatis.logging.stdout.StdOutImpl
 
-#mybatisÊôĞÔ£¨MBGÊ¹ÓÃ)
+#mybatiså±æ€§ï¼ˆMBGä½¿ç”¨)
 mybatis.project = src/main/java
 mybatis.resources = src/main/resources
 
-#session¹ıÆÚÊ±¼ä
+#sessionè¿‡æœŸæ—¶é—´
 server.servlet.session.timeout=30m
 
-#redisÅäÖÃ
+#redisé…ç½®
 spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
