--- a/pay/src/main/resources/application.properties
+++ b/pay/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = awpak47m4a1
+spring.datasource.password = *
 spring.datasource.url=jdbc:mysql://localhost:3306/pay?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 
 
@@ -12,18 +12,18 @@ spring.freemarker.content-type=text/html
 spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates/
 
-#classpath:Ö»ÄÜ¼ÓÔØÕÒµ½µÄµÚÒ»¸ö×ÊÔ´ÎÄ¼ş,classpath*:ÄÜ¼ÓÔØ¶à¸öÂ·¾¶ÏÂµÄ×ÊÔ´ÎÄ¼ş.
+#classpath:åªèƒ½åŠ è½½æ‰¾åˆ°çš„ç¬¬ä¸€ä¸ªèµ„æºæ–‡ä»¶,classpath*:èƒ½åŠ è½½å¤šä¸ªè·¯å¾„ä¸‹çš„èµ„æºæ–‡ä»¶.
 mybatis.mapper-locations = classpath*:mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-#Î¢ĞÅÅäÖÃ
+#å¾®ä¿¡é…ç½®
 wx.appId = wxd898fcb01713c658
 wx.mchId = 1483469312
 wx.mchKey = 098F6BCD4621D373CADE4E832627B4F6
 wx.notifyUrl = netappUrl/pay/notify
 wx.returnUrl = http://127.0.0.1
 
-#Ö§¸¶±¦ÅäÖÃ
+#æ”¯ä»˜å®é…ç½®
 alipay.appId = 34253253253
 alipay.privateKey = fasdfadsfasfasfsafasf
 alipay.aliPayPublicKey = dafdasfgbbvbffghtjtjtuja
